优化代码注释及类名
(cherry picked from commit db0f855675a96af648cc064f933168caeea53377)